--- a/requestHandler/requestHandler-ingress.yaml
+++ b/requestHandler/requestHandler-ingress.yaml
@@ -1,22 +1,15 @@
-##
-## You provide this
-##
-#
-# See https://kubernetes.io/docs/concepts/services-networking/ingress/
-#
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
   name: request-handler-ingress
   annotations:
-    ingress.kubernetes.io/rewrite-target: /$1
-    nginx.ingress.kubernetes.io/proxy-body-size: 8m
+    # If the class annotation is not specified it defaults to "gce".
+    kubernetes.io/ingress.class: "gce"
 spec:
   rules:
   - http:
       paths:
-      - path: /
-        pathType: Prefix
+      - path: /*
         backend:
           serviceName: request-handler
           servicePort: 5000
